RESOLVED FIXED293853
Various build errors, notably "implicit instantiation of undefined template 'std::numeric_limits<unsigned int>'"
https://bugs.webkit.org/show_bug.cgi?id=293853
Summary Various build errors, notably "implicit instantiation of undefined template '...
Michael Catanzaro
Reported 2025-05-31 08:12:04 PDT
For some reason it only fails on i686 and s390x: In file included from /builddir/build/BUILD/webkitgtk-2.49.2-build/webkitgtk-2.49.2/Source/WTF/wtf/SmallSet.cpp:27: /builddir/build/BUILD/webkitgtk-2.49.2-build/webkitgtk-2.49.2/Source/WTF/wtf/SmallSet.h:181:27: error: implicit instantiation of undefined template 'std::numeric_limits<unsigned int>' 181 | it.m_index = std::numeric_limits<unsigned>::max(); | ^ /usr/lib/gcc/i686-redhat-linux/15/../../../../include/c++/15/bits/max_size_type.h:55:10: note: template is declared here 55 | struct numeric_limits; | ^
Attachments
Michael Catanzaro
Comment 1 2025-05-31 08:13:13 PDT
EWS
Comment 2 2025-05-31 08:57:57 PDT
Committed 295648@main (4381457d991e): <https://commits.webkit.org/295648@main> Reviewed commits have been landed. Closing PR #46168 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-05-31 08:58:13 PDT
Michael Catanzaro
Comment 4 2025-06-02 07:38:16 PDT
Reopening because there are more such errors.
Michael Catanzaro
Comment 5 2025-06-02 16:39:11 PDT
EWS
Comment 6 2025-06-02 18:21:25 PDT
Committed 295723@main (bdd2c53befeb): <https://commits.webkit.org/295723@main> Reviewed commits have been landed. Closing PR #46231 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.