SmallSet.h:181:27: error: implicit instantiation of undefined template 'std::numeric_limits<unsigned int>' https://bugs.webkit.org/show_bug.cgi?id=293853

Unreviewed build fix.

* Source/WTF/wtf/SmallSet.h:

Canonical link: https://commits.webkit.org/295648@main